--- a/taller_ing.html
+++ b/taller_ing.html
@@ -7,6 +7,7 @@
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies-fonts.css" rel="stylesheet" />
+    <script src="https://use.fontawesome.com/5235085b15.js"></script>
   </head>
   <body>
     <textarea id="source">
@@ -21,6 +22,18 @@ class: center, middle, inverse, title-slide
 
 
 
+
+class: inverse, center, middle
+
+# Contactos
+
+&lt;a href="mailto:marcela@rladies.org"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt;&amp;nbsp; marcela@rladies.org&lt;/a&gt;&lt;br&gt;
+&lt;a href="https://malfaro2.github.io"&gt;&lt;i class="fa fa-link fa-fw"&gt;&lt;/i&gt;&amp;nbsp; malfaro2.github.io&lt;/a&gt;&lt;br&gt;
+&lt;a href="http://twitter.com/Fichulina"&gt;&lt;i class="fa fa-twitter fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @FIchulina&lt;/a&gt;&lt;br&gt;
+&lt;a href="http://github.com/malfaro2"&gt;&lt;i class="fa fa-github fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @malfaro&lt;/a&gt;&lt;br&gt;
+&lt;a href="http://cimpa.ucr.ac.cr/index.php/acerca-de/personal/investigadores/marcela"&gt;&lt;i class="fa fa-map-marker fa-fw"&gt;&lt;/i&gt;&amp;nbsp; CIMPA Centro de Investigaciones en Matemática Pura y Aplicada&lt;/a&gt;
+
+---
 
 class: center, middle
 
