--- a/taller_ing.html
+++ b/taller_ing.html
@@ -27,11 +27,18 @@ class: inverse, center, middle
 
 # Contactos
 
-&lt;a href="mailto:marcela@rladies.org"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt;&amp;nbsp; marcela@rladies.org&lt;/a&gt;&lt;br&gt;
-&lt;a href="https://malfaro2.github.io"&gt;&lt;i class="fa fa-link fa-fw"&gt;&lt;/i&gt;&amp;nbsp; malfaro2.github.io&lt;/a&gt;&lt;br&gt;
-&lt;a href="http://twitter.com/Fichulina"&gt;&lt;i class="fa fa-twitter fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @FIchulina&lt;/a&gt;&lt;br&gt;
-&lt;a href="http://github.com/malfaro2"&gt;&lt;i class="fa fa-github fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @malfaro&lt;/a&gt;&lt;br&gt;
-&lt;a href="http://cimpa.ucr.ac.cr/index.php/acerca-de/personal/investigadores/marcela"&gt;&lt;i class="fa fa-map-marker fa-fw"&gt;&lt;/i&gt;&amp;nbsp; CIMPA Centro de Investigaciones en Matemática Pura y Aplicada&lt;/a&gt;
+&lt;a href="mailto:fabisalazar14@hotmail.com"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt;&amp;nbsp; Fabiola Salazar &lt;/a&gt;&lt;br&gt;
+
+&lt;a href="mailto:mariapaulamesnmndez@gmail.com"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt;&amp;nbsp; María Paula Mesén &lt;/a&gt;&lt;br&gt;
+
+&lt;a href="mailto:jruizrivera1@gmail.com "&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt;&amp;nbsp; Jimena Ruiz &lt;/a&gt;&lt;br&gt;
+
+
+&lt;a href="https://www.meetup.com/rladies-san-jose/"&gt;&lt;i class="fa fa-link fa-fw"&gt;&lt;/i&gt;&amp;nbsp; https://www.meetup.com/rladies-san-jose/&lt;/a&gt;&lt;br&gt;
+&lt;a href="https://twitter.com/RladiesCR"&gt;&lt;i class="fa fa-twitter fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @RladiesCR&lt;/a&gt;&lt;br&gt;
+&lt;a href="https://github.com/malfaro2/RladiesSJO"&gt;&lt;i class="fa fa-github fa-fw"&gt;&lt;/i&gt;&amp;nbsp; @malfaro2/RladiesSJO&lt;/a&gt;&lt;br&gt;
+
+&lt;a href="mailto:sanjoseCR@rladies.org"&gt;&lt;i class="fa fa-paper-plane fa-fw"&gt;&lt;/i&gt;&amp;nbsp; sanjoseCR@rladies.org&lt;/a&gt;&lt;br&gt;
 
 ---
 
